# proteolizard-data

./: .gitmodules  README.md
cpp/: CMakeLists.txt
cpp/cmake/: ProteoLizardDataConfig.cmake
cpp/src/: CMakeLists.txt  ExposedTimsDataHandle.cpp  ExposedTimsDataHandle.h  Frame.cpp  Frame.h  Hashing.h  ParquetTimsDataHandle.cpp  ParquetTimsDataHandle.h  Proteolizard.cpp  Slice.cpp  Slice.h  SliceVectorized.cpp  SliceVectorized.h  Spectrum.cpp  Spectrum.h  TimsBlock.cpp  TimsBlock.h  TimsBlockVectorized.cpp  TimsBlockVectorized.h  VectorizedFrame.cpp  VectorizedFrame.h  VectorizedSpectrum.cpp  VectorizedSpectrum.h  main.cpp
python/: requirements.txt  setup.py
python/proteolizarddata/: data.py  iteration.py
python/pyproteolizard/: clustering.py  data.py  hashing.py  utility.py
python/test/: test_collision.py  test_frame.py  test_s_curve.py  test_spectrum.py
